--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,5 +1,6 @@
 .form {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
 }
