--- a/blocks/navigation/navigation.css
+++ b/blocks/navigation/navigation.css
@@ -9,9 +9,7 @@
     transition: transform 1000ms ease-in 0s;
     transform: translateX(0);
     left: 0;
-    /* z-index: 30; */
-    /* background: rgba(0, 0, 0, 0.3);;
-    background-size: cover; */
     font-weight: 500;
     font-size: 18px;
+    overflow: hidden;
 }
