--- a/index.css
+++ b/index.css
@@ -9,13 +9,18 @@
 @import url(./blocks/header/__title/header__title.css);
 @import url(./blocks/info/info.css);
 @import url(./blocks/header/__info/header__info.css);
-@import url(./blocks/info/info__title.css);
 @import url(./blocks/logo/logo.css);
 @import url(./blocks/form/form.css);
-@import url(./blocks/form/form__input.css);
 @import url(./blocks/navigation/navigation.css);
 @import url(./blocks/navigation/_visible/navigation_visible.css);
 @import url(./blocks/navigation/__container/navigation__container.css);
 @import url(./blocks/navigation/__item/navigation__item.css);
 @import url(./blocks/navigation/__list/navigation__list.css);
 @import url(./blocks/content/content.css);
+@import url(./blocks/form/__container/form__container.css);
+@import url(./blocks/form/__label/form__label.css);
+@import url(./blocks/form/__checkbox/form__checkbox.css);
+@import url(./blocks/pets/pets.css);
+@import url(./blocks/pets/__list/pets__list.css);
+@import url(./blocks/pets/__image/pets__image.css);
+@import url(./blocks/pets/__item/pets__item.css);
