--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,10 +1,9 @@
-.header {
+.footer {
     width: 100%;
-    height: 50px;
+    max-width: 1280px;
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     font-family: 'Myriad Pro Regular', Arial, Helvetica, sans-serif;
-    background-color:peru;
-    z-index: 30;
 }
