--- a/blocks/form/__checkbox/form__checkbox.css
+++ b/blocks/form/__checkbox/form__checkbox.css
@@ -1,3 +1,20 @@
 .form__checkbox {
+    border: none;
+    outline: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    color: inherit;
+    vertical-align: middle;
+    appearance: none;
     margin: 0 5px;
+    width: 15px;
+    height: 15px;
+    border: 1px solid black;
+    border-radius: 50%;
+}
+
+.form__checkbox:checked {
+    background-image: url('../../../images/checkbox.jpg');
+    background-size: cover;
 }
