--- a/blocks/form/__container/form__container.css
+++ b/blocks/form/__container/form__container.css
@@ -4,4 +4,14 @@
     flex-direction: row;
     align-items: flex-end;
     justify-content: flex-end;
+    flex-wrap: wrap;
+}
+
+@media all and (max-width: 620px) {
+    .form__container {
+        max-width: 150px;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: right;
+    }
 }
