--- a/blocks/form/__label/form__label.css
+++ b/blocks/form/__label/form__label.css
@@ -1,9 +1,8 @@
 .form__label {
     display: flex;
     flex-direction: row-reverse;
-    align-items: center;
     justify-content: center;
-    font-family: 'Myriad Pro Regular';
+    font-family: 'Myriad Pro Regular', Arial, Helvetica, sans-serif;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
@@ -15,4 +14,17 @@
 }
 .form__label:first-of-type {
     margin-right: 30px;
+}
+
+@media all and (max-width: 680px) {
+    .form__label {
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 12px;
+        margin: 5px;
+    }
+
+    .form__label:first-of-type {
+        margin-top: 15px;
+    }
 }
