--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,6 +1,6 @@
 .form {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
