--- a/blocks/header/__button/header__button.css
+++ b/blocks/header/__button/header__button.css
@@ -1,11 +1,9 @@
 .header__button {
-    /* width: 30px;
-    height: 30px; */
     background-color: inherit;
     border: none;
     margin-left: 15px;
     padding: 0;
-    font-family: 'Myriad Pro Regular';
+    font-family: 'Myriad Pro Regular', Arial, Helvetica, sans-serif;
     color: white;
 }
 
@@ -19,8 +17,6 @@
 
 @media screen and (max-width: 768px) {
     .header__button {
-        /* width: 20px;
-        height: 20px; */
         margin-left: 10px;
     }
 }
