--- a/blocks/header/__info/header__info.css
+++ b/blocks/header/__info/header__info.css
@@ -10,18 +10,13 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-right: 10px;
 }
 
 @media screen and (max-width: 1040px) {
     .header__info {
         font-size: 12px;
         line-height: 15px;
-    }
-}
-
-
-@media screen and (max-width: 769px) {
-    .header__info {
-        margin: 10px;
+        margin: 0;
     }
 }
