--- a/blocks/navigation/__item/navigation__item.css
+++ b/blocks/navigation/__item/navigation__item.css
@@ -1,9 +1,13 @@
 .navigation__item {
     text-decoration: none;
-    font-family: 'Myriad Pro Regular';
+    font-family: 'Myriad Pro Regular', Arial, Helvetica, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 22px;
     color: #000;
     margin-top: 15px;
+}
+
+.navigation__item:hover {
+    text-decoration: underline;
 }
