--- a/blocks/navigation/navigation.css
+++ b/blocks/navigation/navigation.css
@@ -1,11 +1,12 @@
 .navigation {
+    z-index: 20;
     width: 200px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    position: absolute;
-    top: 50px;
+    position: fixed;
+    top: 0;
     transition: transform 1000ms ease-in 0s;
     transform: translateX(0);
     left: 0;
