--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     transition-duration: 0.3s;
     background-color: ivory;
-    max-width: 1280px;
 }
