--- a/blocks/pets/__list/pets__list.css
+++ b/blocks/pets/__list/pets__list.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     list-style: none;
-    font-family: 'Myriad Pro Regular';
+    font-family: 'Myriad Pro Regular', Arial, Helvetica, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 22px;
