--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 @import url(./fonts/MyriadPro-Regular/myriadPro-Regular.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__wrapper/header__wrapper.css);
 @import url(./blocks/header/__block/header__block.css);
 @import url(./blocks/header/__button/header__button.css);
 @import url(./blocks/header/__icon/header__icon.css);
@@ -25,3 +26,5 @@
 @import url(./blocks/pets/__image/pets__image.css);
 @import url(./blocks/pets/__item/pets__item.css);
 @import url(./blocks/pets/__item/_visible/pets__item_visible.css);
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__copyright/footer__copyright.css);
